--- a/.github/workflows/pip-service3-swagger-gox.yml
+++ b/.github/workflows/pip-service3-swagger-gox.yml
@@ -21,8 +21,8 @@ jobs:
 
     ############# Test #############
 
-    - name: Test the component
-      uses: pip-devops/actions/go/test@v1
+    # - name: Test the component
+    #   uses: pip-devops/actions/go/test@v1
 
     ############# Release #############
 
